apps/base/echoserver-green/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
  labels:
    istio-injection: enabled
