apps/base/echoserver-green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app: echoserver
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: echoserver
